<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_admin">Finah overview</string>
    <string name="app_name">Finah</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Sign in</string>
    <string name="loginSuccessAdmin">Login Success for Admin!</string>
    <string name="loginSuccessDoctor">Login Success for Doctor!</string>
    <string name="title_activity_docter">DocterActivity</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit</string>
    <string name="tv_theme">Theme</string>
    <string name="tv_title">Title</string>
    <string name="tv_description">Description</string>
    <string name="tv_login">Login</string>
    <string name="tv_password">Password</string>
    <string name="tv_lastname">Firstname</string>
    <string name="tv_firstname">Lastname</string>
    <string name="tv_email">Email</string>
    <string name="tv_street">Street</string>
    <string name="tv_town">Town</string>
    <string name="tv_zipcode">Zipcode</string>
    <string name="tv_birthdate">Birthdate</string>
    <string name="tv_usertype">Usertype</string>
    <string name="tv_screenname">Screenname</string>
    <string name="iv_logo">FinahLogo</string>
    <string name="tv_question">Question</string>
    <string name="tv_answer">Answer</string>
    <string name="tv_workpoint">Workpoint</string>
    <string name="tv_questionlist">Questionlist</string>
    
</resources>
