<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_username"
        android:layout_below="@+id/et_username"
        android:ems="10"
        android:hint="@string/tv_password"
        android:text="p"
        android:inputType="textPassword" >
    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignRight="@+id/et_username"
        android:layout_below="@+id/et_password"
        android:background="@color/snow"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/iv_logo"
        android:src="@drawable/finahsmall" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:text="sven"
        android:hint="@string/tv_login"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

</RelativeLayout>